# deeplearning-lectures

./: README.md
.github/workflows/: 01-pytorch-segmentation.yml  02-pytorch-asr.yml  03-pytorch-gan.yml
ClusterScripts/: README.md  book.sh  book_2.sh  clean_homes.sh  cscluster  handle_keys.sh  kill_reservation.sh  log.sh  port_forward.sh  port_forward_windows.bat
Labs/01-pytorch-object-detection/: data.py  models.py  utils.py
Labs/02-pytorch-asr/: data.py  main_ctc.py  models.py  test_implementation.py  train.idx
Labs/03-pytorch-gan/: data.py  main.py  models.py
LabsSolutions/00-keras-MNIST/: README.md  data.py  main.py  models.py  requirements.txt  run_experiments.sh  test.py  test_img.py  train.py
LabsSolutions/00-pytorch-CIFAR100/: data.py  job.py  models.py  train.py  utils.py  wide_resnet.py
LabsSolutions/00-pytorch-FashionMNIST/: README.md  average_models.py  data.py  models.py  test.py  train.py  tune.py  utils.py
LabsSolutions/pytorch-segmentation-pascalvoc/: config-sample.yaml  pyproject.toml  submit-slurm.py
LabsSolutions/pytorch-segmentation-pascalvoc/src/semseg/: data.py  main.py  metrics.py  optim.py  utils.py
LabsSolutions/pytorch-segmentation-pascalvoc/src/semseg/models/: __init__.py  __main__.py  smp.py  unet.py
Webpage/: 00-keras-mnist.md  00-pytorch-fashionMnist.md  01-keras-cifar.md  01-pytorch-object-detection.md  01-pytorch-segmentation.md  02-pytorch-asr.md  02-pytorch-segmentation.md  03-pytorch-gan.md  03-pytorch-wgan.md  Makefile  argparse.md  biblio.bib  cluster.md  faq.md  howto.md  index.md
docs/: index.html
(+97 files in other folders)
